# predict-sports-results

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
data/: fifa_ratings_seed.csv  players_seed.csv
deploy/: README.md  cloudflare-tunnel.md  env.production.example  worldcap-wa.service  worldcap-wa.timer  worldcap.service  worldcup-wa.service  worldcup-wa.timer  worldcup.service
deploy/macos/: README.md  com.worldcap.daily.plist  com.worldcup.daily.plist  refresh.sh
deploy/windows/: README.md  Register-Task.ps1  refresh.ps1
docs/specs/: 2026-05-21-worldcap-design.md
docs/superpowers/plans/: 2026-05-21-plan-1-foundations-and-thin-pipeline.md  2026-05-22-plan-2-elo-match-model.md  2026-05-23-plan-3-monte-carlo-simulator.md  2026-05-23-plan-4-sentiment-rationale.md  2026-05-23-plan-5-top-scorer.md  2026-05-24-plan-6-dashboard-mcp-deploy.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_odds_and_forecasts.py  0003_rename_state_hash.py  0004_match_event_and_team_rating.py  0005_match_forecast.py  0006_simulator_schema.py  0007_news_sentiment_rationale.py  0008_top_scorer.py  0009_predicted_score.py  0010_match_elo_applied.py
scripts/: seed_competition.py
src/worldcap/: cli.py  config.py  db.py  log.py
src/worldcap/api/: app.py  dashboard.py  mcp_endpoints.py
src/worldcap/enrich/: aggregate.py  claude_client.py  sentiment.py
src/worldcap/ingest/: fixtures.py  news.py  players.py  polymarket.py  reddit.py  results.py  sports_data.py
src/worldcap/jobs/: refresh.py  (+1 more)
src/worldcup/: cli.py  config.py  db.py  log.py
tests/: conftest.py  test_aggregate.py  test_app.py  test_bracket.py  test_bracket_template.py  test_claude_client.py  test_claude_error_handling.py  test_config.py  test_dashboard_golden_boot.py  test_dashboard_home.py  test_dashboard_match.py  test_dashboard_results.py  test_dashboard_static.py  test_dashboard_tournament.py  test_db.py  test_elo.py  test_fixtures.py  test_group_stage.py  test_markdown.py  test_match_model.py  test_mcp_endpoints.py  test_naive.py  test_news_ingest.py  test_orchestrator.py  test_per_match.py  test_players_ingest.py  test_polymarket.py  test_ratings.py  test_rationale.py  test_reddit_ingest.py  test_refresh.py  test_results.py  test_scheduler.py  test_score_sampling.py  test_seed_competition.py  test_sentiment.py  test_simulated_forecast.py  test_sports_data.py  test_static_export.py  test_tiebreakers.py  (+3 more)
wa-bot/: .env.example  README.md  index.js  package.json
(+88 files in other folders)
