[project]
name = "worldcap"
version = "0.1.0"
description = "World Cup 2026 pre-match forecast feed"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "greenlet>=3.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "jinja2>=3.1.0",
    "connectors[polymarket] @ file:///Users/ziv.a/repos_/collectors/collectors",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcap"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
